# stemday2025_autogen

./: .gitignore  1_setup_dev_env.sh  2_start_web_hub.sh  3_stop_web_hub.sh  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Launch CCRI CTF Hub (Mint).desktop  Launch CCRI CTF Hub.desktop  README.md  docker-compose.yml  docker-start.bat  docker-start.sh  generate_all_flags.py  generate_takehome_flags.py  launch_hub.sh  pyproject.toml  requirements.txt  setup_contributor.py  setup_contributor.sh  setup_dev_env.sh  setup_sev_env.sh  stop_web_hub.py  validate_all_flags.py
challenges/01_Stego/: extract_flag.py
challenges/02_Base64/: encoded.txt  memory_dump.txt  solve.py
challenges/03_ROT13/: cipher.txt  decode_rot13.py
challenges/04_Vigenere/: break_vigenere.py  cipher.txt  decoded_output.txt
challenges/04_Vigenère/: break_vigenere.py  cipher.txt
challenges/05_Archive_Password/: crack_zip.py
challenges/06_Hashcat/: hashes.txt  run_chain_crack.py
challenges/07_Extract _from_Binary/: hidden_flag
challenges/07_Extract_from_Binary/: analyze_binary.py  hidden_flag
challenges/08_Fake_Auth_Log/: investigate_authlog.py
challenges/09_Fix_the_Script/: broken_flag.py  broken_flag.sh  script_runner.py  script_runner.sh
challenges/10_Metadata/: inspect_metadata.py  metadata_dump.txt
challenges/11_Hidden_Flag/: search_for_flag.py
challenges/11_Hidden_Flag/junk/backup/: .config.old  sysdump.bak
challenges/11_Hidden_Flag/junk/data/: .hint_file  .summary  info.tmp
challenges/11_Hidden_Flag/junk/logs/: .keep.tmp  .notes
challenges/11_Hidden_Flag/junk/ref/: .archive  readme.txt
challenges/12_QR_Codes/: qr_code_explorer.py
challenges/13_HTTP_Headers/: investigate_headers.py  response_1.txt  response_2.txt  response_3.txt  response_4.txt  response_5.txt
challenges/14_Subdomain _Sweep/: alpha.liber8.local.html  beta.liber8.local.html  delta.liber8.local.html  gamma.liber8.local.html  omega.liber8.local.html
challenges/14_Subdomain_Sweep/: alpha.liber8.local.html  beta.liber8.local.html  delta.liber8.local.html  explore_subdomains.py  gamma.liber8.local.html  omega.liber8.local.html
challenges/15_Process_Inspection/: explore_processes.py  ps_dump.txt
challenges/16_Hex_Hunting/: inspect_binary.py
challenges/17_Nmap_Scanning/: helper_scan.py  helper_scan.sh
challenges/18_Pcap_Search/: analyze_pcap.py  traffic.pcap
flag_generators/: flag_helpers.py  gen_01_stego.py  gen_02_base64.py  gen_03_rot13.py  gen_04_vigenere.py  gen_05_archive_password.py  gen_06_hashcat.py  gen_07_extract_binary.py  gen_08_fake_auth_log.py  gen_09_fix_script.py  gen_10_metadata.py  gen_11_hidden_flag.py  gen_12_qr_codes.py  gen_13_http_headers.py  gen_14_subdomain_sweep.py  gen_15_process_inspection.py  gen_16_hex_hunting.py  gen_17_nmap_scanning.py  gen_18_pcap_search.py  traffic.pcap
web_version_admin/: Challenge.py  ChallengeList.py  challenges.json  challenges.json.bak  server.bak  server.py  server.spec  start_web_hub.sh  stop_web_hub.sh  validation_unlocks.json
web_version_admin/create_website/: build_web_version.sh
web_version_admin/templates/: challenge.html  index.html
